--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">Ejemplo Firebase</string>
     <string name="action_settings">Settings</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="verify_email">Verify Email</string>
+    <string name="login">Login</string>
+    <string name="signed_out">signed_out</string>
+    <string name="hint_email">Type a email</string>
+    <string name="hint_password">Type a password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="create_account">New Accopunt</string>
+    <string name="desc_firebase_lockup">Autentication on Firebase</string>
 </resources>
